Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__SIGN_Merge_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Cached_Input_Type__c</fullName>
        <label>Cached Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want this merge mapping to run by default for all agreements sent. You can override the default if you specify a different merge mapping to use with a specific agreement or agreement template.</description>
        <inlineHelpText>Check this box if you want this merge mapping to run by default for all agreements sent. You can override the default if you specify a different merge mapping to use with a specific agreement or agreement template.</inlineHelpText>
        <label>Default Merge Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>EchoSign Merge Mapping</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EchoSign Merge Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EchoSign Merge Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>